refactor: 에러 컨벤션 적용, setter 제거 (#5)